--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@
       <section class="my-20 px-4 lg:px-32">
         <!-- Title Start -->
         <div class="flex flex-col lg:flex-row items-center gap-10 my-20">
-          <h1 class="text-4xl bg-[#B9FF66] rounded-lg p-1">
+          <h1 class="text-5xl bg-[#B9FF66] rounded-lg p-1">
             Our Working Process
           </h1>
-          <p class="text-center lg:text-left">
+          <p class="text-center text-xl lg:text-left">
             Step-by-Step Guide to Achieving <br class="hidden lg:block" />
             Your Business Goals
           </p>
@@ -272,16 +272,16 @@
         <!-- Title End -->
 
         <!-- Accordion Section Start -->
-        <div class="flex flex-col gap-5">
-          <div class="collapse collapse-plus bg-[#B9FF66]">
+        <div class="flex flex-col gap-5 ">
+          <div class="collapse collapse-plus bg-[#B9FF66] border-2 md:border-b-[12px] border-b-4 border-black rounded-t-[50px] rounded-b-[50px] p-3 md:p-12">
             <input type="radio" name="my-accordion-3" checked="checked" />
             <div
-              class="collapse-title text-xl font-medium flex gap-3 items-center border"
+              class="collapse-title  flex gap-3 items-center"
             >
-              <span class="text-4xl font-semibold">01</span>Consultation
+              <span class="text-5xl md:text-7xl font-semibold">01</span><span class="text-4xl font-normal">Consultation</span>
             </div>
             <div class="collapse-content">
-              <p class="border-t-2 py-6">
+              <p class="border-t-2 border-black py-6">
                 During the initial consultation, we will discuss your business
                 goals and objectives, target audience, and current marketing
                 efforts. This will allow us to understand your needs and tailor
@@ -289,7 +289,7 @@
               </p>
             </div>
           </div>
-          <div class="collapse collapse-plus bg-[#F3F3F3]">
+          <div class="collapse collapse-plus bg-[#F3F3F3] border-2 md:border-b-[8px] border-b-4 border-black rounded-t-[50px] rounded-b-[50px] p-8">
             <input type="radio" name="my-accordion-3" />
             <div
               class="collapse-title text-xl font-medium flex gap-3 items-center"
@@ -306,7 +306,7 @@
               </p>
             </div>
           </div>
-          <div class="collapse collapse-plus bg-base-200">
+          <div class="collapse collapse-plus bg-base-200 border-2 md:border-b-[8px] border-b-4 border-black rounded-t-[50px] rounded-b-[50px] p-8">
             <input type="radio" name="my-accordion-3" />
             <div
               class="collapse-title text-xl font-medium flex gap-3 items-center"
@@ -322,7 +322,7 @@
               </p>
             </div>
           </div>
-          <div class="collapse collapse-plus bg-base-200">
+          <div class="collapse collapse-plus bg-base-200 border-2 md:border-b-[8px] border-b-4 border-black rounded-t-[50px] rounded-b-[50px] p-8">
             <input type="radio" name="my-accordion-3" />
             <div
               class="collapse-title text-xl font-medium flex gap-3 items-center"
@@ -347,19 +347,19 @@
     <!-- Main End -->
 
     <!-- Footer Start -->
-    <footer class="bg-gray-900 text-white p-8 rounded-t-xl mx-16">
+    <footer class="bg-gray-900 text-white p-16 rounded-t-xl mx-0 md:mx-16">
       <div class="container mx-auto space-y-8">
         <!-- Centered Content Wrapper -->
-        <div class="flex justify-between md:space-x-8 space-y-8 md:space-y-0">
+        <div class="flex justify-between flex-col md:flex-row md:space-x-8 space-y-8 md:space-y-0">
           <!-- Logo and Navigation Links -->
-          <div class="flex md:space-x-6 space-y-4 md:space-y-0">
+          <div class="flex flex-col md:flex-row items-center md:space-x-6 space-y-4 md:space-y-0">
             <!-- Logo -->
             <div class="space-x-2">
               <img src="./images/logo-small.png" alt="Logo" class="h-8" />
             </div>
           </div>
           <!-- Navigation Links -->
-          <div class="flex space-x-6">
+          <div class="flex flex-col md:flex-row space-x-0 md:space-x-6 text-center md:text-left">
             <a href="#" class="text-gray-300 hover:underline">About us</a>
             <a href="#" class="text-gray-300 hover:underline">Services</a>
             <a href="#" class="text-gray-300 hover:underline">Use Cases</a>
@@ -368,28 +368,32 @@
           </div>
 
           <!-- Social Media Icons -->
-          <div class="flex space-x-4">
-            <a href="#" class="bg-white text-gray-900 p-2 rounded-full">
-              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                <!-- LinkedIn Icon -->
-              </svg>
+          <div class="flex justify-center md:justify-normal space-x-4">
+            <a href="#" class="bg-white p-2 rounded-full">
+              <img
+                src="./images/social-linkedin.png"
+                alt="LinkedIn"
+                class="w-5 h-5"
+              />
             </a>
-            <a href="#" class="bg-white text-gray-900 p-2 rounded-full">
-              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                <!-- Facebook Icon -->
-              </svg>
+            <a href="#" class="border-2 p-2 rounded-full">
+              <img
+                src="./images/social-fb.png"
+                alt="Facebook"
+                class="w-5 h-5 text-black"
+              />
             </a>
-            <a href="#" class="bg-white text-gray-900 p-2 rounded-full">
-              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                <!-- Twitter Icon -->
-              </svg>
+            <a href="#" class="bg-white p-2 rounded-full">
+              <img
+                src="./images/social-twitter.png"
+                alt="Twitter"
+                class="w-5 h-5"
+              />
             </a>
           </div>
         </div>
         <!-- Contact Information and Subscription Form Container -->
-        <div
-          class="flex justify-between md:space-x-8 space-y-8 md:space-y-0"
-        >
+        <div class="flex md:justify-between flex-col md:flex-row md:space-x-8 space-y-8 md:space-y-0">
           <!-- Contact Information -->
           <div class="space-y-2 text-center md:text-left">
             <div
@@ -405,14 +409,14 @@
           </div>
 
           <!-- Subscription Form -->
-          <div class="flex items-center space-x-4 bg-gray-800 p-4 rounded-lg">
+          <div class="flex items-center gap-5 w-full md:w-auto flex-col md:flex-row md:space-x-4 md:bg-gray-800 md:p-4 rounded-lg">
             <input
               type="email"
               placeholder="Email"
-              class="bg-transparent border border-gray-500 text-white px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-lime-400"
+              class="bg-transparent border border-gray-500 text-white px-4 py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-lime-400 w-full"
             />
             <button
-              class="bg-lime-400 text-black px-6 py-2 rounded-lg font-semibold hover:bg-lime-500"
+              class="bg-lime-400 text-black px-6 py-2 rounded-lg font-semibold hover:bg-lime-500 w-full md:w-auto"
             >
               Subscribe to news
             </button>
@@ -420,10 +424,10 @@
         </div>
         <!-- Footer Bottom -->
         <div
-          class="container mx-auto border-t border-gray-700 pt-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-400"
+          class="container mx-auto border-t border-gray-700 pt-4 flex flex-col md:flex-row justify-start gap-10 items-center text-xl text-white"
         >
           <p>&copy; 2023 Positivus. All Rights Reserved.</p>
-          <a href="#" class="hover:underline">Privacy Policy</a>
+          <a href="#" class="underline">Privacy Policy</a>
         </div>
       </div>
     </footer>
